--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ var setTimeoffline = function() {
 
 <body>
   <div class="container">
-    <h1>Temperature &amp; Humidity Dashboard <small>Firebase + ESP8266</small></h1>
+    <h1>Temperature &amp; Dust Detector Dashboard | Yodsarun</small></h1>
     <hr />
      
     <!-- Nav tabs -->
