--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Updating");
 		} else {
 			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Updating");
+			$("#status > .content").text("Updatied");
 		}
 		
 		setTimeoffline();
@@ -218,7 +218,7 @@ var setTimeoffline = function() {
            <div class="col-sm-4">
              <div class="dialog success fadeIn animated" id="status">
                <div class="content">???</div>
-               <div class="title">Node 1</div>
+               <div class="title">Time Update</div>
              </div>
            </div>
         </div>
