--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ $(document).ready(function(e) {
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		
-		$("#status").removeClass("danger").addClass("success");
-		$("#status > .content").text("Updating");
+		$("#status").removeClass("success").addClass("danger");
+		$("#status > .content").text("Updating..");
 		
 		setTimeoffline();
 	});
@@ -122,10 +122,10 @@ $(document).ready(function(e) {
 		Arow.time = new Date(Arow.time);
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Updated");
+			$("#status > .content").text("Up to date");
 		} else {
 			$("#status").removeClass("success").addClass("danger");
-			$("#status > .content").text("Updating");
+			$("#status > .content").text("Updating..");
 		}
 		
 		setTimeoffline();
