--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ $(document).ready(function(e) {
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		
-		$("#status").removeClass("success").addClass("danger");
+		$("#status").removeClass("danger").addClass("success");
 		$("#status > .content").text("Updating..");
 		
 		setTimeoffline();
