--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $(document).ready(function(e) {
 		$("#humidity > .content").text(row.humidity + " %");
 		
 		$("#status").removeClass("danger").addClass("success");
-		$("#status > .content").text("Up to date");
+		$("#status > .content").text("Up to date2");
 		
 		setTimeoffline();
 	});
@@ -125,7 +125,7 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Updating..");
 		} else {
 			$("#status").removeClass("danger").addClass("success");
-			$("#status > .content").text("Up to date");
+			$("#status > .content").text("Up to date1");
 		}
 		
 		setTimeoffline();
