--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $(document).ready(function(e) {
 	
 	chart = new CanvasJS.Chart("chartContainer", {
 		title: {
-			text: "Temperature & Humidity"
+			text: "Temperature & Humidityhhh"
 		},
 		axisX:{  
 			valueFormatString: "HH:mm"
