--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ $(document).ready(function(e) {
 	firebase.initializeApp(config);
 		
 	var logDHT = firebase.database().ref().child("logDHT");
+	var logDHT = firebase.database().ref().child("dust");
 		
 	logDHT.on("child_added", function(sanp) {
 		if (!newItems) return;
@@ -236,7 +237,7 @@ var setTimeoffline = function() {
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<div class="dialog success fadeIn animated" id="pm10">
+						<div class="dialog success fadeIn animated" id="time">
 							<div class="content">00.00 ug/m3</div>
 							<div class="title">PM 10</div>
 						</div>
