--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ var setTimeoffline = function() {
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<div class="dialog success fadeIn animated" id="time">
+						<div class="dialog success fadeIn animated" id="pm10">
 							<div class="content">00.00 ug/m3</div>
 							<div class="title">PM 10</div>
 						</div>
