--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ var setTimeoffline = function() {
              </div>
 					 </div>
 					<div class="col-sm-4">
-						<div class="dialog success fadeIn animated" id="pm25">
+						<div class="dialog success fadeIn animated" id="time">
 							<div class="content">00.00 ug/m3</div>
 							<div class="title">PM 2.5</div>
 						</div>
