--- a/index.html
+++ b/index.html
@@ -253,19 +253,19 @@ var setTimeoffline = function() {
 					 </div>
 					<div class="col-sm-4">
 						<div class="dialog success fadeIn animated" id="pm25">
-							<div class="content">00.00 ug/m3</div>
+							<div class="content"></div>
 							<div class="title">PM 2.5</div>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="dialog success fadeIn animated" id="pm1">
-							<div class="content">00.00 ug/m3</div>
+							<div class="content"></div>
 							<div class="title">PM 1</div>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="dialog success fadeIn animated" id="time">
-							<div class="content">00.00 ug/m3</div>
+							<div class="content"></div>
 							<div class="title">PM 10</div>
 						</div>
 					</div>
