--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ var setTimeoffline = function() {
         <div id="chartContainer" style="height: 300px; width: 100%;"></div>
       </div>
 		</div>
-		<center><div class="text" >Last Update </div></center>
+		<div class="text" ><center>Last Update </center></div>
   </div>
 </body>
 </html>
