--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ $(document).ready(function(e) {
 		
 		
 		$("#status").removeClass("success").addClass("danger");
-		$("#status > .content").text("Updating...");
+		$("#status > .content").text("Updating1...");
 		
 		setTimeoffline();
 	});
