--- a/index.html
+++ b/index.html
@@ -95,9 +95,29 @@ $(document).ready(function(e) {
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		
+		$("#status").removeClass("success").addClass("danger");
+		$("#status > .content").text("Updating...");
+		
+		setTimeoffline();
+	});
+
+	var dust = firebase.database().ref().child("dust");
+	dust.on("child_added", function(sanp) {
+		if (!newItems) return;
+		var row = sanp.val();
+		
+		row.time = new Date(row.time);
+		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		chart.render();
+		$("#pm25 > .content").html(row.pm25 + " ug/m3");
+		$("#pm1 > .content").text(row.pm1 + " ug/m3");
+		$("#pm10 > .content").html(row.pm10 + " ug/m3");
+		
 		
 		$("#status").removeClass("success").addClass("danger");
-		$("#status > .content").text("Updating1...");
+		$("#status > .content").text("Updating...");
 		
 		setTimeoffline();
 	});
@@ -132,6 +152,31 @@ $(document).ready(function(e) {
 		
 		setTimeoffline();
 	});
+
+	var now = new Date();
+	dust.orderByChild("time").startAt(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate()).once("value", function(sanp) {
+		console.log(sanp);
+		newItems = true;
+		var dataRows = sanp.val();
+		var lastRows = 0;
+		$.each(dataRows, function(index, row) {
+			row.time = new Date(row.time);
+			chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});
+			 lastRows = row;
+		});
+		chart.render();
+		
+		var Arow = lastRows;
+		$("#pm25 > .content").html(row.pm25 + " ug/m3");
+		$("#pm1 > .content").text(row.pm1 + " ug/m3");
+		$("#pm10 > .content").html(row.pm10 + " ug/m3");
+		
+		setTimeoffline();
+	});
+
+
 });
 
 var setTimeoffline = function() {
@@ -229,7 +274,7 @@ var setTimeoffline = function() {
         <div id="chartContainer" style="height: 300px; width: 100%;"></div>
       </div>
 		</div>
-		<div class="text" ><center>Last Update </center></div>
+		<div class="text" ><center>Last update at </center></div>
   </div>
 </body>
 </html>
