--- a/index.html
+++ b/index.html
@@ -268,6 +268,24 @@ var setTimeoffline = function() {
                <div class="title">Node 1</div>
              </div>
 			</div>
+			<div class="col-sm-4">
+				<div class="dialog success fadeIn animated" id="status">
+				  <div class="content">???</div>
+				  <div class="title">Node 1</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="dialog success fadeIn animated" id="status">
+				  <div class="content">???</div>
+				  <div class="title">Node 1</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="dialog success fadeIn animated" id="status">
+				  <div class="content">???</div>
+				  <div class="title">Node 1</div>
+				</div>
+			</div>
         </div>
       </div>
       <div role="tabpanel" class="tab-pane" id="history">
