--- a/index.html
+++ b/index.html
@@ -270,20 +270,20 @@ var setTimeoffline = function() {
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm1">
-				  <div class="content">???</div>
-				  <div class="title">Node 1</div>
+				  <div class="content">00.00 ug/m3</div>
+				  <div class="title">PM 1</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
-				  <div class="content">???</div>
-				  <div class="title">Node 1</div>
+				  <div class="content">00.00 ug/m3</div>
+				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
-				  <div class="content">???</div>
-				  <div class="title">Node 1</div>
+				  <div class="content">00.00 ug/m3</div>
+				  <div class="title">PM 10</div>
 				</div>
 			</div>
         </div>
