--- a/index.html
+++ b/index.html
@@ -296,6 +296,6 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div class="text" ><center>Last update at <div id="update_time"></div></center></div>
+  <div class="text" ><center>Last update at <div id="status"></div></center></div>
 </body>
 </html>
