--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ $(document).ready(function(e) {
 		
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
-		$("#pm1").text(row.pm1 + " ug/m3");
-		$("#pm25").text(row.pm25 + " ug/m3");
-		$("#pm10").text(row.pm10 + " ug/m3");
-		$('#update_time > .content').text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getTime());
+		$("#pm1 > .content").text(row.pm1 + " ug/m3");
+		$("#pm25 > .content").text(row.pm25 + " ug/m3");
+		$("#pm10 > .content").text(row.pm10 + " ug/m3");
+		$('#update_time').text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getTime());
 		
 		$("#status").removeClass("success").addClass("danger");
 		$("#status > .content").text("Updating...");
@@ -302,6 +302,6 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div class="text" ><center>Last update at <div id="status"></div></center></div>
+  <div class="text" ><center>Last update at <div id="update_time"></div></center></div>
 </body>
 </html>
