--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@ $(document).ready(function(e) {
 		
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
-		$("#pm1 > .content").text(row.pm1 + " ug/m3");
-		$("#pm25 > .content").text(row.pm25 + " ug/m3");
-		$("#pm10 > .content").text(row.pm10 + " ug/m3");
-		$('#update_time').text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getTime());
+		$('#update_time').text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getHours() +":" + now.getMinutes() +":" + now.getSeconds());
 		
 		$("#status").removeClass("success").addClass("danger");
 		$("#status > .content").text("Updating...");
@@ -109,27 +106,6 @@ $(document).ready(function(e) {
 		setTimeoffline();
 	});
 
-	/*var dust = firebase.database().ref().child("dust");
-	dust.on("child_added", function(sanp) {
-		if (!newItems) return;
-		var row = sanp.val();
-		
-		row.time = new Date(row.time);
-		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
-		chart.render();
-		$("#pm1").text(row.pm1 + " ug/m3");
-		$("#pm25").text(row.pm25 + " ug/m3");
-		$("#pm10").text(row.pm10 + " ug/m3");
-		
-		
-		$("#status").removeClass("success").addClass("danger");
-		$("#status > .content").text("Updating...");
-		
-		setTimeoffline();
-	});*/
-	
 	var now = new Date();
 	logDHT.orderByChild("time").startAt(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate()).once("value", function(sanp) {
 		console.log(sanp);
@@ -147,10 +123,7 @@ $(document).ready(function(e) {
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
 		$("#humidity > .content").text(Arow.humidity + " %");
-		$("#pm1").text(row.pm1 + " ug/m3");
-		$("#pm25").text(row.pm25 + " ug/m3");
-		$("#pm10").text(row.pm10 + " ug/m3");
-		
+	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
@@ -164,6 +137,27 @@ $(document).ready(function(e) {
 		setTimeoffline();
 	});
 
+	var dust = firebase.database().ref().child("dust");
+	dust.on("child_added", function(sanp) {
+		if (!newItems) return;
+		var row = sanp.val();
+		
+		row.time = new Date(row.time);
+		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		chart.render();
+		$("#pm1 > .content").text(row.pm1 + " ug/m3");
+		$("#pm25 > .content").text(row.pm25 + " ug/m3");
+		$("#pm10 > .content").text(row.pm10 + " ug/m3");
+		
+		$("#status").removeClass("success").addClass("danger");
+		$("#status > .content").text("Updating...");
+		
+		setTimeoffline();
+	});
+	
+
 	var now = new Date();
 	dust.orderByChild("time").startAt(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate()).once("value", function(sanp) {
 		console.log(sanp);
@@ -174,16 +168,26 @@ $(document).ready(function(e) {
 			row.time = new Date(row.time);
 			chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
 			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});
+			chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
 			 lastRows = row;
 		});
 		chart.render();
 		
 		var Arow = lastRows;
-		$("#pm1").text(row.pm1 + " ug/m3");
-		$("#pm25").text(row.pm25 + " ug/m3");
-		$("#pm10").text(row.pm10 + " ug/m3");
-		//$("#update_time > .content").text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "-" + now.getTime());
+		$("#pm1 > .content").text(row.pm1 + " ug/m3");
+		$("#pm25 > .content").text(row.pm25 + " ug/m3");
+		$("#pm10 > .content").text(row.pm10 + " ug/m3");
+		var now = new Date();
+		Arow.time = new Date(Arow.time);
+		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
+			$("#status").removeClass("success").addClass("danger");
+			$("#status > .content").text("Updating..");
+		} else {
+			$("#status").removeClass("danger").addClass("success");
+			$("#status > .content").text("Up to date");
+		}
+		
+		setTimeoffline();
 
 	});
 
