--- a/index.html
+++ b/index.html
@@ -309,6 +309,6 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div class="text" ><center>Last update at <div id="update_time"></div></center></div>
+  <div><center>Last update at <div id="update_time"></div></center></div>
 </body>
 </html>
