--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ var setTimeoffline = function() {
            <div class="col-sm-4">
              <div class="dialog success fadeIn animated" id="status">
                <div class="content">???</div>
-               <div class="title">Node 1</div>
+               <div class="title">Status</div>
              </div>
 			</div>
 			<div class="col-sm-4">
@@ -378,6 +378,6 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div><center>Last update at <div id="update_time"></div></center></div>
+  <div class="dialog success fadeIn animated"><center>Last update at <div id="update_time"></div></center></div>
 </body>
 </html>
