--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ $(document).ready(function(e) {
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
 		$("#humidity > .content").text(Arow.humidity + " %");
-		$("#pm1 > .content").text(row.pm1 + " ug/m3");
-	 	$("#pm25 > .content").text(row.pm25 + " ug/m3");
-	 	$("#pm10 > .content").text(row.pm10 + " ug/m3");
+		$("#pm1 > .content").text(Arow.pm1 + " ug/m3");
+	 	$("#pm25 > .content").text(Arow.pm25 + " ug/m3");
+	 	$("#pm10 > .content").text(Arow.pm10 + " ug/m3");
 		$('#update_time').text(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getHours() +":" + now.getMinutes() +":" + now.getSeconds());
 	
 		var now = new Date();
@@ -141,45 +141,45 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Up to date");
 		}
 
-		if(row.pm25 >=0 && row.pm25 <=25)
+		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
 			$("#pm25").removeClass("success").addClass("verygood");
 		}
-		else if(row.pm25 >=26 && row.pm25 <=37)
+		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
 			$("#pm25").removeClass("success").addClass("good");
 		}
-		else if(row.pm25 >=38 && row.pm25 <=50)
+		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
 			$("#pm25").removeClass("success").addClass("mediam");
 		}
-		else if(row.pm25 >=51 && row.pm25 <=90)
+		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
 			$("#pm25").removeClass("success").addClass("bad");
 		}
-		else if(row.pm25 > 90)
+		else if(Arow.pm25 > 90)
 		{
 			$("#pm25").removeClass("success").addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
-		if(row.pm10 >=0 && row.pm10 <=50)
+		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
 			$("#pm10").removeClass("success").addClass("verygood");
 		}
-		else if(row.pm10 >=51 && row.pm10 <=80)
+		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
 			$("#pm10").removeClass("success").addClass("good");
 		}
-		else if(row.pm10 >=81 && row.pm10 <=120)
+		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
 			$("#pm10").removeClass("success").addClass("mediam");
 		}
-		else if(row.pm10 >=121 && row.pm10 <=180)
+		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
 			$("#pm10").removeClass("success").addClass("bad");
 		}
-		else if(row.pm10 > 180)
+		else if(Arow.pm10 > 180)
 		{
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
