--- a/index.html
+++ b/index.html
@@ -378,6 +378,6 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div class="dialog success fadeIn animated"><center>Last update at <div id="update_time"></div></center></div>
+  <div class="dialog success fadeIn animated" class="content"><center>Last update at <div id="update_time"></div></center></div>
 </body>
 </html>
