--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $(document).ready(function(e) {
 		$("#pm1 > .content").html(row.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(row.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
-		$('#update_time').html(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getHours() +":" + now.getMinutes() +":" + now.getSeconds());
+		$('#update_time').text(row.time);
 		
 		$("#status").removeClass("success").addClass("danger");
 		$("#status > .content").text("Updating...");
@@ -129,7 +129,7 @@ $(document).ready(function(e) {
 		$("#pm1 > .content").html(Arow.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(Arow.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(Arow.pm10 + " ug/m3");
-		$('#update_time').html(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate() + "  " + now.getHours() +":" + now.getMinutes() +":" + now.getSeconds());
+		$('#update_time').html(Arow.time);
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
