--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ var setTimeoffline = function() {
 		</div>
 		
   </div>
-  <div class="dialog success fadeIn animated" class="content" id="update_time"><center>Last update at : </center></div>
+
+  <center>
+	  <div>Last up date</div>
+	  <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
+	</center>
 </body>
 </html>
