--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@ var setTimeoffline = function() {
   </div>
 
   <center>
-	  <div>Last up date</div>
-	  <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
-	</center>
+	  <div>Last up date</div></center>
+	 <center><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </center> 
+	
 </body>
 </html>
