--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ var setTimeoffline = function() {
   </div>
 
   <center>
-		<img src=image/aqi.PNG width="50%">
+		<img src=image/aqi.PNG >
 	  <div>Last up date</div></center>
 	 <center><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </center> 
 	
