--- a/index.html
+++ b/index.html
@@ -144,44 +144,54 @@ $(document).ready(function(e) {
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
+			$("#qut25 > .content").html("Very Good");
 			$("#pm25").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
+			$("#qut25 > .content").html("Good");
 			$("#pm25").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
+			$("#qut25 > .content").html("Medium");
 			$("#pm25").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
+			$("#qut25 > .content").html("Bad");
 			$("#pm25").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm25 > 90)
 		{
+			$("#qut25 > .content").html("Very Bad");
 			$("#pm25").removeClass("success").addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
+			$("#qut10 > .content").html("Very Good");
 			$("#pm10").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
+			$("#qut10 > .content").html("Good");
 			$("#pm10").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
+			$("#qut10 > .content").html("Medium");
 			$("#pm10").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
+			$("#qut10 > .content").html("Bad");
 			$("#pm10").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm10 > 180)
 		{
+			$("#qut10 > .content").html("Very Bad");
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
 
@@ -259,6 +269,14 @@ var setTimeoffline = function() {
 	/* box-shadow: 0px 10px 8px -10px rgba(0, 0, 0, 0.4) inset; */
 	font-weight: bold;
 }
+
+.dialog > .qurity {
+	padding: 30px 0;
+	border-radius: 6px 6px 0 0;
+	font-size: 24px;
+	color: rgba(70, 70, 70, 0.87);
+	text-align: center;
+}
 .nav-tabs {
 	margin-bottom: 20px;
 }
@@ -294,25 +312,28 @@ var setTimeoffline = function() {
            </div>
            <div class="col-sm-4">
              <div class="dialog success fadeIn animated" id="status">
-               <div class="content">???</div>
+			   <div class="content">???</div>
                <div class="title">Status</div>
              </div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm1">
 				  <div class="content">00.00 ug/m3</div>
+				  <div class="qurity">...</div>
 				  <div class="title">PM 1</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
 				  <div class="content">00.00 ug/m3</div>
+				  <div class="qurity" id="qut25">...</div>
 				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
 				  <div class="content">00.00 ug/m3</div>
+				  <div class="qurity" id="qut10">...</div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
