--- a/index.html
+++ b/index.html
@@ -144,54 +144,54 @@ $(document).ready(function(e) {
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
-			$("#qut25 > .content").html("Very Good");
+			$("#qut25 > .qurity").text("Very Good");
 			$("#pm25").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
-			$("#qut25 > .content").html("Good");
+			$("#qut25 > .qurity").text("Good");
 			$("#pm25").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
-			$("#qut25 > .content").html("Medium");
+			$("#qut25 > .qurity").text("Medium");
 			$("#pm25").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
-			$("#qut25 > .content").html("Bad");
+			$("#qut25 > .qurity").text("Bad");
 			$("#pm25").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm25 > 90)
 		{
-			$("#qut25 > .content").html("Very Bad");
+			$("#qut25 > .qurity").text("Very Bad");
 			$("#pm25").removeClass("success").addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
-			$("#qut10 > .content").html("Very Good");
+			$("#qut10 > .qurity").text("Very Good");
 			$("#pm10").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
-			$("#qut10 > .content").html("Good");
+			$("#qut10 > .qurity").text("Good");
 			$("#pm10").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
-			$("#qut10 > .content").html("Medium");
+			$("#qut10 > .qurity").text("Medium");
 			$("#pm10").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
-			$("#qut10 > .content").html("Bad");
+			$("#qut10 > .qurity").text("Bad");
 			$("#pm10").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm10 > 180)
 		{
-			$("#qut10 > .content").html("Very Bad");
+			$("#qut10 > .qurity").text("Very Bad");
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
 
