--- a/index.html
+++ b/index.html
@@ -277,6 +277,39 @@ var setTimeoffline = function() {
 	color: rgba(70, 70, 70, 0.87);
 	text-align: center;
 }
+.dialog.primary > .content{
+	background: #00aa9a;
+}
+.dialog.success > .content {
+	background: #59b75c;
+}
+.dialog.info > .content {
+	background: #03a9f4;
+}
+.dialog.warning > .content {
+	background: #ff5722;
+}
+
+.dialog.danger > .content {
+	background: #f44336;
+}
+
+.dialog.verygood > .content {
+	background: #1cc1f3;
+}
+.dialog.good > .content {
+	background: #4fa535;
+}
+.dialog.mediam > .content {
+	background: #f3ef1c;
+}
+.dialog.bad > .content {
+	background: #ec940f;
+}
+.dialog.verybad > .content {
+	background: #ec0f0f;
+}
+
 .nav-tabs {
 	margin-bottom: 20px;
 }
