--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ var setTimeoffline = function() {
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
 				  <div class="content">00.00 ug/m3 </div>
-				  <div class="content" id="qut10">...</div>
+				  <div class="qurity" id="qut10">...</div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
