--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ var setTimeoffline = function() {
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
 				  <div class="content">00.00 ug/m3 </div></div>
-				  <div class="qurity" >...</div>
+				  <div class="qurity" id="qut25">...</div>
 				  <div class="title">PM 2.5</div>
 				
 			</div>
