--- a/index.html
+++ b/index.html
@@ -417,17 +417,17 @@ var setTimeoffline = function() {
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
-				  <div class="content">00.00 ug/m3 </div></div>
-				  <div class="qurity" id="qut25">...</div>
+				  <div class="content">00.00 ug/m3 </div>
+				  <div class="qurity" >...</div>
 				  <div class="title">PM 2.5</div>
-				
+				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
 				  <div class="content">00.00 ug/m3 </div></div>
 				  <div class="qurity" id="qut10">...</div>
 				  <div class="title">PM 10</div>
-				
+				</div>
 			</div>
         </div>
       </div>
