--- a/index.html
+++ b/index.html
@@ -418,12 +418,14 @@ var setTimeoffline = function() {
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
 				  <div class="content">00.00 ug/m3 </div>
+				  <div class="qurity" id="qut25">...</div>
 				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
-				  <div class="content">00.00 ug/m3 </div></div>
+				  <div class="content">00.00 ug/m3 </div>
+				  <div class="qurity" id="qut10">...</div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
@@ -439,7 +441,6 @@ var setTimeoffline = function() {
   <center>
 		<img src=image/aqi.png width="40%" >
 	  <div>Last up date</div></center>
-	  <div id="qut25"></div>
 	 <center><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </center> 
 	
 </body>
