--- a/index.html
+++ b/index.html
@@ -336,36 +336,36 @@ var setTimeoffline = function() {
 	color: rgba(70, 70, 70, 0.87);
 	text-align: center;
 }
-.qurity.primary > .content{
+.dialog.primary > .qurity{
 	background: #00aa9a;
 }
-.qurity.success > .content {
+.dialog.success > .qurity {
 	background: #59b75c;
 }
-.qurity.info > .content {
+.dialog.info > .qurity {
 	background: #03a9f4;
 }
-.qurity.warning > .content {
+.dialog.warning > .qurity {
 	background: #ff5722;
 }
 
-.qurity.danger > .content {
+.dialog.danger > .qurity {
 	background: #f44336;
 }
 
-.qurity.verygood > .content {
+.dialog.verygood > .qurity {
 	background: #1cc1f3;
 }
-.qurity.good > .content {
+.dialog.good > .qurity {
 	background: #4fa535;
 }
-.qurity.mediam > .content {
+.dialog.mediam > .qurity {
 	background: #f3ef1c;
 }
-.qurity.bad > .content {
+.dialog.bad > .qurity {
 	background: #ec940f;
 }
-.qurity.verybad > .content {
+.dialog.verybad > .qurity {
 	background: #ec0f0f;
 }
 
