--- a/index.html
+++ b/index.html
@@ -365,12 +365,16 @@ var setTimeoffline = function() {
 	
 </body>
 <footer>
+		<div role="tabpanel" class="tab-pane active" id="overview">
+				<div class="row">
 	<center>
 		<img src=image/aqi.png width="40%" >
 	  	<div>Last up date</div></center>
 	 <center>
 		 <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
 	</center>
+	</div>
+	</div>
 	
 </footer>
 </html>
