--- a/index.html
+++ b/index.html
@@ -366,14 +366,14 @@ var setTimeoffline = function() {
 </body>
 <footer>
 		<div role="tabpanel" class="tab-pane active" id="overview">
-				<div class="row">
+				<div class="row"><div class="col-sm-4">
 	<center>
 		<img src=image/aqi.png width="40%" >
 	  	<div>Last up date</div></center>
 	 <center>
 		 <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
 	</center>
-	</div>
+	</div></div>
 	</div>
 	
 </footer>
