--- a/index.html
+++ b/index.html
@@ -351,7 +351,9 @@ var setTimeoffline = function() {
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
+			<div class="col-sm-4">
 			<div id="chart_div" style="width: 400px; height: 120px;"></div>
+			</div>
         </div>
       </div>
       <div role="tabpanel" class="tab-pane" id="history">
