--- a/index.html
+++ b/index.html
@@ -363,20 +363,21 @@ var setTimeoffline = function() {
 		
   </div>
 
-  
+  <div role="tabpanel" class="tab-pane active" id="overview">
+		<div class="row">
+			<div class="col-sm-4">
+<center>
+<img src=image/aqi.png width="40%" >
+  <div>Last up date</div></center>
+<center>
+ <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
+</center>
+</div>
+</div>
+</div>
 	
 </body>
-<footer>
-		<div role="tabpanel" class="tab-pane active" id="overview">
-				<div class="row"><div class="col-sm-4">
-	<center>
-		<img src=image/aqi.png width="40%" >
-	  	<div>Last up date</div></center>
-	 <center>
-		 <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
-	</center>
-	</div></div>
-	</div>
-	
-</footer>
+
+
+
 </html>
